srm: Use log4j and other minor improvements in Storage class
- Fix various issues found by findbugs
- Use log4j for logging (done my best to map log messages
  to correct log level, but the mappig can probably be improved).
- Avoid catching Exception, or at least distinguish between Exception
  and RuntimeException.
- Chain exceptions when appropriate

Target: trunk
Acked-by: Tigran Mkrtchyan <tigran.mkrtchyan@desy.de>
Acked-by: Dmitry Litvintsev <litvinse@fnal.gov>
Patch: http://rb.dcache.org/r/427/